# array_record

./: .bazelrc  .gitignore  .readthedocs.yaml  BUILD  MODULE.bazel  README.md  WORKSPACE  protobuf.diff  requirements.in  requirements_lock.txt  setup.py  test_requirements_lock_3_11.txt  test_requirements_lock_3_12.txt  test_requirements_lock_3_13.txt  test_requirements_lock_3_14.txt
.github/workflows/: build-and-publish.yml  build.yml  build_and_publish.yml  build_and_publish_template.yml  publish_release.yml  python-tests.yml  stub_workflow.yml
array_record/: BUILD  setup.py
array_record/beam/: BUILD  README.md  __init__.py  arrayrecordio.py  example.py  options.py
array_record/beam/examples/: example_full_demo_cli.sh  example_gcs_conversion.py  example_sink_conversion.py
array_record/python/: BUILD  array_record_data_source.py  array_record_data_source_test.py  array_record_module.cc  array_record_module_test.py
beam/: README.md  arrayrecordio.py  demo.py  dofns.py  example.py  pipelines.py  testdata.py
beam/examples/: example_gcs_conversion.py  example_sink_conversion.py  example_text_conversion.py  requirements.txt
cpp/: BUILD  array_record_fuzzer.cc  array_record_reader.cc  array_record_reader.h  array_record_reader_test.cc  array_record_writer.cc  array_record_writer.h  array_record_writer_test.cc  common.h  layout.proto  lrc.cc  lrc.h  lrc_test.cc  masked_reader.cc  masked_reader.h  masked_reader_test.cc  parallel_for.h  parallel_for_test.cc  sequenced_chunk_writer.cc  sequenced_chunk_writer.h  sequenced_chunk_writer_test.cc  shareable_dependency.h  shareable_dependency_test.cc  test_utils.cc  test_utils.h  test_utils_test.cc  thread_compatible_shared_ptr.h  thread_compatible_shared_ptr_test.cc  thread_pool.cc  thread_pool.h  tri_state_ptr.h  tri_state_ptr_test.cc
docs/: Makefile  README.md  beam_integration.md  beam_reference.rst  build_docs.py  changelog.md  conf.py  contributing.md  core_concepts.md  cpp_reference.rst  examples.md  index.rst  installation.md  performance.md  python_reference.md  python_reference.rst  quickstart.md  requirements.txt
oss/: BUILD  Dockerfile  README.md  build.Dockerfile  build.Dockerfile.aarch64  build.Dockerfile.x86_64  build_whl.sh  build_whl_runner.sh  docker_runner.sh  runner.sh  runner_common.sh  test_import_grain.py  test_import_tensorflow.py  test_requirements_lock_3_10.txt  test_requirements_lock_3_13.txt  test_with_grain.py  test_with_tf.py
patches/: riegeli.patch
python/: BUILD  array_record_data_source.py  array_record_data_source_cpp.cc  array_record_data_source_cpp.h  array_record_data_source_test.py  array_record_module.cc  array_record_module_test.py  exported_symbols_mac.lds  read_instructions_lib.cc  read_instructions_lib.h
python/testdata/: BUILD  digits.array_record-00000-of-00002  digits.array_record-00001-of-00002
